# seamlessrdp

./: .cvsignore  .gitignore  README.md  WTS Window Clipper.sln  indent-all  notes.txt  seamlessrdp.sln
ClientDLL/: TSWindowClipper.vcproj  client.reg  clipper.Def  clipper.cpp  clipper.def  clipper.h  hash.cpp  hash.h  stdstring.h  tokenizer.cpp  tokenizer.h  tswindowclipper.vcproj  tswindowclipper.vcxproj  tswindowclipper.vcxproj.filters  windowdata.cpp  windowdata.h
ServerExe/: Makefile  Makefile.am  autogen.sh  clipper.rc  clipper.vcproj  configure.ac  hookdll.c  main.c  main.cpp  resource.h  seamlessrdphook.c  shared.c  shared.h  vchannel.c  vchannel.h  vchannel.vcproj
ServerExe/HookDll/: hook.cpp  hook.h  hookDll.vcproj  hookdll.c  hookdll.cpp  hookdll.h  hookdll.vcproj
